@@ -10,6 +10,8 @@
     ADDED: lock tabs, close inactive tabs, close duplicated tabs
     ADDED: better trash integration
 
+  CHANGED: mountman gui: current selection persists refresh of mountlist,
+           mountlist is focused after refresh
   CHANGED: dont't execute a process if the correct working dir cannot be set
   CHANGED: dont't retrieve working dir of the cmdline from the label which might get truncated
            - store it in a string instead
